# turbovec-rs

./: CLAUDE.md  Cargo.toml  README.md  justfile  plan.md
benchmark/: README.md  generate_100k_jsonl.sh  run_search_benchmark.sh
spec/: 00-glossary.md  01-concept.md  02-data-model.md  03-runtime-model.md  04-interfaces.md  05-conformance.md  CHANGELOG.md
src/: commands.rs  commands_test.rs  config.rs  config_test.rs  embed.rs  filter.rs  filter_test.rs  import.rs  import_test.rs  main.rs  sidecar.rs  sidecar_test.rs  sql_query.rs  sql_query_test.rs
tests/: main_smoke.rs
