[package]
name = "turbovec-rs"
version = "0.1.0"
edition = "2021"
description = "Persistent vector index CLI with semantic search using turbovec + embeddings"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
embeddings = { path = "../embeddings" }
turbovec = "0.8"
